fix .row.wrap.center

--- a/src/index.css
+++ b/src/index.css
@@ -406,7 +406,7 @@ mark{background-color:var(--bg-warning);}
 .row>.col-3{flex:3;}
 	.row.let{flex-wrap:wrap;}
 	.row.let>*{flex:none;}
-	.row.center{align-items:center;}
+	.row.center:not(.wrap){align-items:center;}
 	.shift{margin-left:auto;} /* .nav>li.shift, .row>*.shift */
 
 .row.let.mar{margin-bottom:0;} /* ! will not collapse with following element */
